--- a/Loveman/App.config
+++ b/Loveman/App.config
@@ -6,21 +6,24 @@
         </sectionGroup>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
     <userSettings>
         <Loveman.Properties.Settings>
             <setting name="Path_Love" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="Path_Moonscript" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="Path_Projects" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="Path_Editor" serializeAs="String">
-                <value>C:\Windows\System32\notepad.exe</value>
+                <value />
+            </setting>
+            <setting name="Path_SublimeMerge" serializeAs="String">
+                <value />
             </setting>
         </Loveman.Properties.Settings>
     </userSettings>
