Added VS Code integration and fixed some more issues with spaces in project names

--- a/Loveman/Loveman.csproj
+++ b/Loveman/Loveman.csproj
@@ -135,6 +135,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="love.ico" />
+    <None Include="Resources\code16.png" />
     <None Include="Resources\merge16.png" />
     <None Include="Resources\link.png" />
     <None Include="Resources\sublime16.png" />
