Added the ability to add an icon to the windows executable

--- a/Loveman/Loveman.csproj
+++ b/Loveman/Loveman.csproj
@@ -90,6 +90,7 @@
     <Compile Include="LoveVersion.cs" />
     <Compile Include="MoonLogLineInfo.cs" />
     <Compile Include="MoonQueuedItem.cs" />
+    <Compile Include="Native.cs" />
     <Compile Include="Plist.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ProjectInfo.cs" />
