Working on a small redesign

--- a/Loveman/App.config
+++ b/Loveman/App.config
@@ -11,19 +11,22 @@
     <userSettings>
         <Loveman.Properties.Settings>
             <setting name="Path_Love" serializeAs="String">
-                <value/>
-            </setting>
-            <setting name="Path_Moonscript" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="Path_Projects" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="Path_Editor" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="Path_SublimeMerge" serializeAs="String">
-                <value/>
+                <value />
+            </setting>
+            <setting name="Path_Lovr" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LoveNotFound_Warning_Shown" serializeAs="String">
+                <value>False</value>
             </setting>
         </Loveman.Properties.Settings>
     </userSettings>
