--- a/Loveman/Properties/Settings.settings
+++ b/Loveman/Properties/Settings.settings
@@ -14,5 +14,11 @@
     <Setting Name="Path_SublimeMerge" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Path_Lovr" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="LoveNotFound_Warning_Shown" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
