--- a/Loveman/Loveman.csproj
+++ b/Loveman/Loveman.csproj
@@ -154,6 +154,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="love.ico" />
+    <Content Include="lovr.ico" />
     <Content Include="Moonscript\lua5.1.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
